# sensor-server

./: Cargo.toml  config.toml
src/: main.rs
static/: index.html  style.css
wasm/: Cargo.toml
wasm/src/: lib.rs
