[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-util = "0.3"
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

[dependencies.gloo-timers]
version = "0.2"
features = ["futures"]

[dependencies.web-sys]
version = "0.3.69"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "CssStyleDeclaration",
  "SvgElement",
  "HtmlCollection",
  "HtmlAnchorElement",
  "HtmlImageElement",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "MouseEvent",
  "HtmlTableElement",
  "console",
  "Location",
]
